# lambda.net

./: .gitignore  LICENSE  cabal.project  resources.md
hsdotnet/: Setup.hs  default.nix  hsdotnet.cabal
hsdotnet-cpp/: Makefile  Setup.hs  default.nix  hsdotnet-cpp.cabal
hsdotnet-cpp/cpp/: gen_std.cpp  gen_utils.cpp  utils.cpp  utils.hpp
hsdotnet-cpp/src/Foreign/Hoppy/Example/Internal/: EmptyCpp.hs
hsdotnet-generator/: default.nix  hsdotnet-generator.cabal
hsdotnet-generator/src-exe/: Main.hs
hsdotnet-generator/src/Foreign/Hoppy/Example/: Generator.hs
hsdotnet/src-exe/: Main.hs
hsdotnet/src/Foreign/Hoppy/Example/: Std.hs  Utils.hs
hsdotnet/tests/: Main.hs
