name: hsdotnet-cpp
version: 0.1.0
license: Apache-2.0
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2022 Bryan Gardiner
build-type: Custom
cabal-version: 2.0

extra-source-files:
  Makefile
  cpp/utils.cpp
  cpp/utils.hpp

custom-setup
  setup-depends:
      base
    , Cabal
    , hoppy-runtime >=0.8 && <0.9
    , hsdotnet-generator >=0.1 && <0.2

library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Hoppy.Example.Internal.EmptyCpp
  build-depends:
      base
    , hoppy-runtime >=0.8 && <0.9
  default-language: Haskell2010
  extra-libraries:   nethost
  extra-lib-dirs: /usr/share/dotnet/packs/Microsoft.NETCore.App.Host.arch-x64/6.0.10/runtimes/arch-x64/native/

  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
