name: hsdotnet
version: 0.1.0
license: Apache-2.0
author: Bryan Gardiner <bog@khumba.net>
maintainer: Bryan Gardiner <bog@khumba.net>
copyright: Copyright 2015-2022 Bryan Gardiner
build-type: Custom
cabal-version: 2.0

custom-setup
  setup-depends:
      base
    , Cabal
    , hoppy-runtime >=0.8 && <0.9
    , hsdotnet-generator >=0.1 && <0.2

library
  hs-source-dirs: src
  exposed-modules:
      Foreign.Hoppy.Example.Std
    , Foreign.Hoppy.Example.Utils
  other-extensions:
      FlexibleInstances
    , MultiParamTypeClasses
    , OverlappingInstances
    , TypeSynonymInstances
    , UndecidableInstances
  build-depends:
      base
    , hsdotnet-cpp >= 0.1 && <0.2
    , hoppy-runtime >=0.8 && <0.9
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind
  -- This causes us to link against libexample.so:
  extra-libraries:   example
                   , nethost
  extra-lib-dirs: /usr/share/dotnet/packs/Microsoft.NETCore.App.Host.arch-x64/6.0.10/runtimes/arch-x64/native/

executable hsdotnet
  hs-source-dirs: src-exe
  main-is: Main.hs
  build-depends:
      base
    , hsdotnet
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind -dynamic
  extra-lib-dirs: /usr/share/dotnet/packs/Microsoft.NETCore.App.Host.arch-x64/6.0.10/runtimes/arch-x64/native/

test-suite hsdotnet-tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -W -fwarn-incomplete-patterns -fwarn-unused-do-bind -dynamic
  build-depends:
      base
    , hoppy-example
    , hoppy-runtime >=0.8 && <0.9
    , HUnit
